--- a/cryptowatcherR.csproj
+++ b/cryptowatcherR.csproj
@@ -12,6 +12,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
+    <PackageReference Include="Cryptowatcher.TA-LIb-Core" Version="1.0.0" />
   </ItemGroup>
 
   <ItemGroup>
