--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -12,6 +12,8 @@
     "@types/redux-thunk": "^2.1.0",
     "axios": "^0.18.0",
     "bootstrap": "^4.3.1",
+    "highcharts": "^7.1.1",
+    "highcharts-react-official": "^2.1.3",
     "jquery": "^3.4.0",
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.8",
