--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -3,7 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@types/highcharts": "^5.0.39",
     "@types/jest": "24.0.11",
     "@types/node": "11.13.7",
     "@types/react": "16.8.14",
@@ -13,7 +12,7 @@
     "@types/redux-thunk": "^2.1.0",
     "axios": "^0.18.0",
     "bootstrap": "^4.3.1",
-    "highcharts": "6.1.1",
+    "highcharts": "^7.1.1",
     "highcharts-react-official": "^2.1.3",
     "jquery": "^3.4.0",
     "react": "^16.8.6",
