--- a/cryptowatcherR.csproj
+++ b/cryptowatcherR.csproj
@@ -13,6 +13,7 @@
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
     <PackageReference Include="Cryptowatcher.TA-LIb-Core" Version="1.0.0" />
+    <PackageReference Include="Microsoft.ML" Version="0.11.0" />
   </ItemGroup>
 
   <ItemGroup>
