--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "cryptoConnection": "Server=localhost;Database=cryptowatcher;Uid=root;Pwd=Solna123@;SslMode=none;AllowPublicKeyRetrieval=True",
+    "providerName": "MySql.Data.MySqlClient"    
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Debug",
