--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -6,6 +6,7 @@
     "@types/jest": "24.0.11",
     "@types/node": "11.13.7",
     "@types/react": "16.8.14",
+    "@types/react-bootstrap-typeahead": "^3.4.5",
     "@types/react-dom": "16.8.4",
     "@types/react-redux": "^7.0.8",
     "@types/react-router-dom": "^4.3.2",
@@ -17,6 +18,7 @@
     "jquery": "^3.4.0",
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.8",
+    "react-bootstrap-typeahead": "^3.4.5",
     "react-dom": "^16.8.6",
     "react-redux": "^7.0.2",
     "react-router-dom": "^5.0.0",
