--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@types/jest": "24.0.11",
+    "@types/jquery": "^3.3.29",
     "@types/node": "11.13.7",
     "@types/react": "16.8.14",
     "@types/react-bootstrap-typeahead": "^3.4.5",
