--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -1,7 +1,9 @@
 {
   "ConnectionStrings": {
     "cryptoConnection": "Server=localhost;Database=cryptowatcher;Uid=root;Pwd=Solna123@;SslMode=none;AllowPublicKeyRetrieval=True",
-    "providerName": "MySql.Data.MySqlClient"    
+    "providerName": "MySql.Data.MySqlClient",
+    
+    "DefaultConnection": "DataSource=app.db"  
   },
   "Logging": {
     "LogLevel": {
