--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -11,12 +11,14 @@
     "@types/react-dom": "16.8.4",
     "@types/react-redux": "^7.0.8",
     "@types/react-router-dom": "^4.3.2",
+    "@types/reactstrap": "^8.0.1",
     "@types/redux-thunk": "^2.1.0",
     "axios": "^0.18.0",
     "bootstrap": "^4.3.1",
     "highcharts": "^7.1.1",
     "highcharts-react-official": "^2.1.3",
     "jquery": "^3.4.0",
+    "oidc-client": "^1.8.2",
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.9",
     "react-bootstrap-typeahead": "^3.4.5",
@@ -25,6 +27,7 @@
     "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.0",
     "react-thunk": "^1.0.0",
+    "reactstrap": "^8.0.0",
     "typescript": "3.4.5"
   },
   "scripts": {
